update category images

--- a/public/views/users/categories.ejs
+++ b/public/views/users/categories.ejs
@@ -5,19 +5,19 @@
         <div class="grid grid-cols-3 gap-12">
             <div>
                 <a href="/products/drinks">
-                    <img src="/images/categories.png" class="border-4 border-red-700" alt="categories">
+                    <img src="https://res.cloudinary.com/dlhada2yw/image/upload/v1675079247/productImages/drinks_prev_fa8bnq.png" class="border-4 border-red-700" alt="categories">
                     <p>DRINKS</p>
                 </a>
             </div>
             <div>
                 <a href="/products/snacks">
-                    <img src="/images/categories.png" class="border-4 border-red-700" alt="categories">
+                    <img src="https://res.cloudinary.com/dlhada2yw/image/upload/v1675079247/productImages/snacks_prev_zp72bq.png" class="border-4 border-red-700" alt="categories">
                     <p>SNACKS</p>
                 </a>
             </div>
             <div>
                 <a href="/products/fruits">
-                    <img src="/images/categories.png" class="border-4 border-red-700" alt="categories">
+                    <img src="https://res.cloudinary.com/dlhada2yw/image/upload/v1675079250/productImages/fruits_prev_ecpbup.png" class="border-4 border-red-700" alt="categories">
                     <p>FRUITS</p>
                 </a>
             </div>
@@ -25,19 +25,19 @@
         <div class="grid grid-cols-3 gap-12">
             <div>
                 <a href="/products/laces">
-                    <img src="/images/categories.png" class="border-4 border-red-700" alt="categories">
+                    <img src="https://res.cloudinary.com/dlhada2yw/image/upload/v1675079247/productImages/laces_prev_jsw3js.png" class="border-4 border-red-700" alt="categories">
                     <p>LACES</p>
                 </a>
             </div>
             <div>
                 <a href="/products/uniform">
-                    <img src="/images/categories.png" class="border-4 border-red-700" alt="categories">
+                    <img src="https://res.cloudinary.com/dlhada2yw/image/upload/v1675079141/productImages/uniform_prev_d8jdwm.png" class="border-4 border-red-700" alt="categories">
                     <p>UNIFORM</p>
                 </a>
             </div>
             <div>
                 <a href="/products/supplies">
-                    <img src="/images/categories.png" class="border-4 border-red-700" alt="categories">
+                    <img src="https://res.cloudinary.com/dlhada2yw/image/upload/v1675079247/productImages/supplies_prev_au1xu0.png" class="border-4 border-red-700" alt="categories">
                     <p>SUPPLIES</p>
                 </a>
             </div>
