--- a/public/views/accounts/index.ejs
+++ b/public/views/accounts/index.ejs
@@ -16,7 +16,10 @@
     <div class="grid grid-cols-7">
         <img src="https://res.cloudinary.com/dlhada2yw/image/upload/v1674522298/productImages/MainLogo_kwoajv.png" alt="Logo" class="col-start-3 col-span-3">
     </div>
-    <div class="flex py-8 justify-center">
+    <div class="flex py-8 justify-center flex-col items-center">
+        <div class="py-4 px-12 mb-8 border-4 border-yellow-500 w-1/3 text-center cursor-pointer text-yellow-600 <%= message == 'None' ? 'hidden' : 'block'%>" id="message">
+            <%=message%>
+        </div>
         <div class="py-4 px-12 border-4 border-red-700 w-1/3">
             <h1 class="text-red-700 text-2xl font-bold text-center mb-4">LOGIN</h1>
             <form action="/submit" method="post" class="w-full">
