--- a/public/views/admins/header.ejs
+++ b/public/views/admins/header.ejs
@@ -17,8 +17,11 @@
                         <a class="dropdown-toggle py-2.5 bg-transparent text-white font-medium rounded focus:outline-none focus:ring-0 flex items-center" href="#" type="button" id="account-dropdown" data-bs-toggle="dropdown" aria-expanded="false">Hi, <%=user.fn%> <i class="fa-solid fa-caret-down pl-4"></i></a>
                         <ul class="dropdown-menu min-w-full absolute bg-white text-base z-50 float-left py-2 list-none text-left rounded-lg shadow-lg mt-1 hidden m-0 bg-clip-padding border-none" aria-labelledby="account-dropdown">
                             <li>
-                                <a class="dropdown-item py-2 px-4 font-normal block w-full bg-transparent text-gray-700 hover:bg-gray-100" href="#">Profile</a>
+                                <a class="dropdown-item py-2 px-4 font-normal block w-full bg-transparent text-gray-700 hover:bg-gray-100" href="/profile">Profile</a>
                             </li>
+                            <% if (user.level == 1) { %><li>
+                                <a class="dropdown-item py-2 px-4 font-normal block w-full bg-transparent text-gray-700 hover:bg-gray-100" href="/manageAdmin">Manage Admin</a>
+                            </li><% } %>
                             <li>
                                 <a class="dropdown-item py-2 px-4 font-normal block w-full bg-transparent text-gray-700 hover:bg-gray-100" href="/logout">Logout</a>
                             </li>
