--- a/public/views/users/cart.ejs
+++ b/public/views/users/cart.ejs
@@ -3,13 +3,15 @@
 <script src="/js/user-cart.js"></script>
 </head>
 <%- include('header.ejs', {user: user, loggedIn: loggedIn, page: page}) %>
-    <div class="pt-8 pl-8">
+    <div class="pt-8 pl-8 pr-24 flex justify-between">
         <a href="/categories" class="text-xl font-bold text-red-700"><i class="fa-solid fa-arrow-left"></i> Back</a>
+        <input type="button" class="px-4 my-2 py-2 bg-red-700 cursor-pointer hover:bg-red-800 text-white rounded-md" value="Clear Cart" id="clearCartBtn" data-user="<%=user.id%>" data-cart="<%=JSON.stringify(cart)%>">
         </div>
     </div>
     <div class="grid grid-cols-5 pb-12">
         <div class="col-span-4 col-start-2 pr-24">
             <div class="grid grid-flow-row auto-rows-max gap-4">
+            <div class="border-2 border-red-700 flex justify-end"></div>
                 <%cart.forEach(item => { %>
                     <div class="flex gap-8">
                         <img src="<%=item.image_url%>" alt="item" class="border-2 border-red-700 max-h-36">
@@ -28,7 +30,7 @@
             </div>
             <div class="flex py-2">
                 <p class="text-red-700 font-semibold w-40">Phone Number:</p>
-                <p class="col-span-3">09123456789</p>
+                <p class="col-span-3"><%=user.contact%></p>
             </div>
             <div class="flex py-2">
                 <p class="text-red-700 font-semibold w-40">Mode of Payment:</p>
